--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,35 @@ body {
 .left-col {
   position: relative;
 }
+.right-col {
+  position: relative;
+}
 
-/* #container canvas {
-  width: 100% !important;
-  height: 100%;
-} */
+@media (max-width: 768px) {
+  .main-container {
+    flex-direction: column;
+  }
+  .col {
+    width: 100%;
+    height: 50%;
+  }
+}
 
-/* #container .col canvas {
-  width: 100% !important;
-} */
+/*GUI*/
+.tab {
+  background-color: #f1f1f1;
+  border: none;
+  cursor: pointer;
+  padding: 10px 15px;
+  transition: 0.3s;
+}
+
+.tab:hover {
+  background-color: #ddd;
+}
+
+.tabcontent {
+  display: none;
+  padding: 15px;
+  border-top: none;
+}
