--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
 
 .col {
   width: 50%;
+  overflow: auto;
 }
 
 .left-col {
@@ -35,8 +36,9 @@ body {
     flex-direction: column;
   }
   .col {
-    width: 100%;
-    height: 50%;
+    width: 100vw;
+    height: 50vh;
+    overflow: auto;
   }
 }
 
