--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,31 @@
 @import "normalize.css";
 
+@mixin respond-to($point) {
+  @if $point == small {
+    @media (max-width: 600px) {
+      @content;
+    }
+  }
+
+  @else if $point == medium {
+    @media (max-width: 900px) {
+      @content;
+    }
+  }
+
+  @else if $point == large {
+    @media (max-width: 1200px) {
+      @content;
+    }
+  }
+
+  @else if $point == portrait {
+    @media (orientation: portrait) {
+      @content;
+    }
+  }
+}
+
 html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -14,23 +40,51 @@ body {
   box-sizing: border-box;
 }
 
-// #trajectoryGUI {
-// }
+label {
+  font-size: 10px;
+  margin-bottom: 6px;
+  text-transform: uppercase;
+  color: #666;
+}
+
+button {
+  border: 1px solid black;
+  background-color: white;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 12px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: black;
+    color: white;
+  }
+}
 
 .main-container {
-  width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: row;
+
+  @include respond-to(portrait) {
+    flex-direction: column;
+  }
 }
 
 .col {
   width: 50%;
-}
-
-.left-col {
+  height: 100vh;
   position: relative;
-  border-left: 1px solid #eee;
+
+  @include respond-to(portrait) {
+    width: 100%;
+    height: auto;
+  }
+
+  &.left {
+    @include respond-to(portrait) {
+      height: 50vh;
+    }
+  }
 }
 
 .trigger-container {
@@ -44,20 +98,70 @@ body {
   }
 }
 
-@media (max-width: 768px) {
-  .main-container {
-    flex-direction: column;
+.triggers {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 100%;
+  overflow: hidden;
+
+  .trigger, .add-trigger {
+    display: flex;
+    width: 20%;
+    height: 50%;
   }
 
-  .col {
-    width: 100vw;
-    height: 50vh;
-    overflow-y: auto;
-    overflow-x: hidden;
+  .trigger {
+    flex-direction: column;
+    padding: 10px 5%;
+    row-gap: 15px;
+    text-align: center;
+    justify-content: space-between;
+
+    &:nth-child(2n) {
+      background-color: #eee;
+    }
+  }
+
+  .add-trigger {
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    flex-direction: column;
+    border: 1px solid #eee;
+    font-size: 10px;
+    text-transform: uppercase;
+    color: #666;
+
+    &:hover {
+      background-color: #eee;
+    }
+  }
+
+  .control {
+    display: flex;
+    flex-direction: column;
+    // row-gap: 10px;
+
+    &.direction {
+      button {
+        margin-top: 4px;
+      }
+    }
+  }
+
+  input[type=range] {
+    appearance: slider-vertical;
   }
 }
 
 /*GUI*/
+.tabs {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .tab {
   background-color: #f1f1f1;
   border: none;
@@ -72,8 +176,10 @@ body {
 
 .tabcontent {
   display: none;
-  padding: 15px;
+  padding-top: 50px;
   border-top: none;
+  overflow: hidden;
+  height: 100%;
 }
 
 /*GUI for OSC*/
@@ -98,11 +204,4 @@ body {
   text-align: left;
   background-color: white;
   /* Set the background color of the cells */
-}
-
-/* Set the width of input fields to 100% */
-input {
-  width: 100%;
-  box-sizing: border-box;
-  /* Include padding and border in the element's total width and height */
 }
