--- a/styles.scss
+++ b/styles.scss
@@ -155,6 +155,29 @@ button {
   }
 }
 
+// trajectories
+.trajectories {
+  .trajectory-tabs {
+    padding: 0 10px 15px;
+  }
+
+  .header {
+    padding: 15px 10px;
+    border-top: 1px solid #eee;
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+  }
+
+  .item {
+    display: flex;
+    flex-direction: row;
+    column-gap: 15px;
+    border-bottom: 1px solid #eee;
+    padding: 10px;
+  }
+}
+
 /*GUI*/
 .tabs {
   position: absolute;
