--- a/styles.scss
+++ b/styles.scss
@@ -117,10 +117,17 @@ button {
     row-gap: 15px;
     text-align: center;
     justify-content: space-between;
+    position: relative;
 
     &:nth-child(2n) {
       background-color: #eee;
     }
+  }
+
+  .title {
+    position: absolute;
+    top: 5px;
+    left: 5px;
   }
 
   .add-trigger {
