fix: triggers controls

--- a/styles.scss
+++ b/styles.scss
@@ -122,6 +122,11 @@ button {
     &:nth-child(2n) {
       background-color: #eee;
     }
+
+    .direction {
+      display: flex;
+      flex-direction: row;
+    }
   }
 
   .title {
