--- a/styles.scss
+++ b/styles.scss
@@ -59,6 +59,11 @@ button {
     background-color: black;
     color: white;
   }
+
+  &.selected {
+    background-color: black;
+    color: white;
+  }
 }
 
 .main-container {
@@ -104,6 +109,7 @@ button {
   flex-wrap: wrap;
   height: 100%;
   overflow: hidden;
+  min-height: 620px;
 
   .trigger, .add-trigger {
     display: flex;
@@ -113,26 +119,41 @@ button {
 
   .trigger {
     flex-direction: column;
-    padding: 10px 5%;
-    row-gap: 15px;
+    padding: 13px 10px;
+    row-gap: 10px;
     text-align: center;
     justify-content: space-between;
     position: relative;
-
-    &:nth-child(2n) {
-      background-color: #eee;
-    }
 
     .direction {
       display: flex;
       flex-direction: row;
     }
-  }
 
-  .title {
-    position: absolute;
-    top: 5px;
-    left: 5px;
+    .header {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid #f1f1f1;
+
+      label {
+        margin-bottom: 0;
+      }
+
+      button {
+        appearance: none;
+        background-color: #fff;
+        border: none;
+        padding: 0 0 10px 10px;
+        font-size: 12px;
+        margin-top: -2px;
+        color: #666;
+
+        &:hover {
+          color: #d3d3d3;
+        }
+      }
+    }
   }
 
   .add-trigger {
@@ -140,15 +161,14 @@ button {
     justify-content: center;
     cursor: pointer;
     flex-direction: column;
-    border: 1px solid #eee;
-    font-size: 10px;
+    font-size: 32px;
     text-transform: uppercase;
-    color: #666;
-    border-right: none;
-    border-bottom: none;
+    color: #d3d3d3;
+    appearance: none;
+    border: none;
 
     &:hover {
-      background-color: #eee;
+      background-color: #f1f1f1;
     }
   }
 
@@ -157,10 +177,28 @@ button {
     flex-direction: column;
     // row-gap: 10px;
 
-    &.direction {
-      button {
-        margin-top: 4px;
+    &.inline {
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      column-gap: 15px;
+
+      label {
+        margin-bottom: 0;
       }
+    }
+
+    &.full {
+      flex: 1;
+
+      input {
+        height: 100%;
+        min-height: 40px;
+      }
+    }
+
+    .direction {
+      justify-content: center;
     }
   }
 
@@ -177,7 +215,7 @@ button {
 
   .header {
     padding: 15px 10px;
-    border-top: 1px solid #eee;
+    border-top: 1px solid #f1f1f1;
     display: flex;
     flex-direction: row;
     column-gap: 20px;
@@ -187,16 +225,21 @@ button {
     display: flex;
     flex-direction: row;
     column-gap: 15px;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #f1f1f1;
     padding: 10px;
   }
 }
 
 /*GUI*/
+#gui-container {
+  padding-top: 33.8px;
+}
+
 .tabs {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 9;
 }
 
 .tab {
@@ -213,10 +256,73 @@ button {
 
 .tabcontent {
   display: none;
-  padding-top: 50px;
   border-top: none;
   overflow: hidden;
   height: 100%;
+  position: relative;
+
+  .lines {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    z-index: 999;
+
+    .line {
+      background-color: #f1f1f1;
+      position: absolute;
+
+      &.top {
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      &.middle {
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        top: 50%;
+        left: 0;
+      }
+
+      &.left20 {
+        width: 1px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 20%;
+      }
+
+      &.left40 {
+        width: 1px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 40%;
+      }
+
+      &.left60 {
+        width: 1px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 60%;
+      }
+
+      &.left80 {
+        width: 1px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 80%;
+      }
+    }
+  }
 }
 
 /*GUI for OSC*/
