--- a/styles.scss
+++ b/styles.scss
@@ -206,6 +206,7 @@ button {
 .trajectories {
   height: 100%;
   overflow-y: scroll;
+  padding-bottom: 40px;
 
   .header {
     padding: 15px 10px;
