--- a/styles.scss
+++ b/styles.scss
@@ -276,6 +276,12 @@ button {
   padding: 5px 15px;
   transition: 0.3s;
   margin: 5px;
+
+  &:focus {
+    outline: none;
+    background-color: #3f3f3f;
+    color: #ffffff;
+  }
 }
 .trajectory {
   position: relative; // Add position: relative
