--- a/slider.scss
+++ b/slider.scss
@@ -23,12 +23,12 @@ $connect-color: #000;
 
 
 .noUi-vertical {
-  width: auto;
+  width: 100%;
   position: relative;
   box-shadow: none;
 
   .noUi-base {
-    width: 50px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,6 +43,12 @@ $connect-color: #000;
         background-color: $connect-color;
       }
     }
+  }
+
+  .noUi-origin {
+    right: auto;
+    left: 50%;
+    margin-left: 25px;
   }
 
   .noUi-handle {
