--- a/slider.scss
+++ b/slider.scss
@@ -4,9 +4,9 @@ $slider-border-radius: 0;
 $slider-width: 2px;
 
 $handle-color: #000;
-$handle-border-radius: 6px;
-$handle-width: 48px;
-$handle-height: 16px;
+$handle-border-radius: 0;
+$handle-width: 26px;
+$handle-height: 58px;
 $handle-border-color: #fff;
 
 $connect-color: #000;
@@ -26,6 +26,7 @@ $connect-color: #000;
   width: 100%;
   position: relative;
   box-shadow: none;
+  padding: 20px 0;
 
   .noUi-base {
     width: 100%;
@@ -34,6 +35,24 @@ $connect-color: #000;
     justify-content: center;
 
     // border-radius: $slider-border-radius;
+
+    &:before {
+      content: '';
+      width: 2px;
+      height: 20px;
+      background-color: $slider-background-color;
+      position: absolute;
+      top: -20px;
+    }
+
+    &:after {
+      content: '';
+      width: 2px;
+      height: 20px;
+      background-color: $connect-color;
+      position: absolute;
+      bottom: -20px;
+    }
 
     .noUi-connects {
       width: 2px;
@@ -58,8 +77,8 @@ $connect-color: #000;
     height: $handle-height;
     border: none;
     box-shadow: none;
-    bottom: -10px;
-    left: -49px;
+    bottom: -30px;
+    left: -38px;
     cursor: pointer;
 
     &:before, &:after {
@@ -69,9 +88,11 @@ $connect-color: #000;
     .noUi-touch-area {
       width: 56px;
       height: 56px;
-      margin-top: -20px;
-      margin-left: -4px;
+      margin-top: 1px;
+      margin-left: -15px;
       outline: none;
+      // for debugging click area
+      // background-color: rgba(0,0,0,.3);
     }
   }
 }
