renamed trigger as object 2

--- a/styles.scss
+++ b/styles.scss
@@ -138,18 +138,18 @@ button {
   border: 2px solid transparent; // Transparent border
 }
 
-.trigger-container {
+.object-container {
   position: absolute;
   top: 0;
   left: 0;
   pointer-events: none;
 
-  .trigger-label {
+  .object-label {
     font-size: 14px;
   }
 }
 
-.triggers {
+.objects {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -165,8 +165,8 @@ button {
     overflow: auto;
   }
 
-  .trigger,
-  .add-trigger {
+  .object,
+  .add-object {
     display: flex;
     width: 20%;
     height: 50%;
@@ -180,7 +180,7 @@ button {
     }
   }
 
-  .trigger {
+  .object {
     flex-direction: column;
     padding: 13px 10px;
     row-gap: 10px;
@@ -219,7 +219,7 @@ button {
     }
   }
 
-  .add-trigger {
+  .add-object {
     align-items: center;
     justify-content: center;
     cursor: pointer;
